# ekad

./: .env.example  .gitignore  END_TO_END_TESTING.md  IMPLEMENTATION_WALKTHROUGH.md  PHASE_4_5_COMPLETE.md  PROGRESS.md  QUICKSTART.md  QUICK_START_INCIDENT.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  SETUP_INCIDENT_WORKFLOW.md  TEST_RESULTS.md  docker-compose.yml  how_to_deploy.md  main.py  pyproject.toml  start.sh  stop.sh  test_e2e.sh
agents/: briefing.py  graph.py  incident_context.py  incident_workflow.py  researcher.py  reviewer.py  state.py  writer.py
app/: main.py  models.py
app/api/: routes.py
codeql/: __init__.py  analysis_service.py  builder.py  cli.py  graph_emitter.py  query_executor.py  source_registry.py  storage.py
codeql/queries/: __init__.py  call_graph.ql  imports.ql  subprocess_calls.ql
core/: config.py  embeddings.py  llm.py  logging.py
core/graph/: __init__.py  neo4j_manager.py
core/secrets/: __init__.py  base.py  gcp_secret_manager.py  resolver.py
docker/: Dockerfile
ingestion/: base.py  change_detector.py  code_connector.py  confluence.py  firestore.py  gitlab.py  openmetadata.py  processor.py  service.py
tests/: test_agents.py  test_codeql_api.py  test_codeql_integration.py  test_connectors.py  test_incident_workflow.py  test_setup.py
vectorstore/: hybrid_search.py  qdrant_manager.py  retriever.py
vectorstore/retrievers/: base.py  code_retriever.py  dispatcher.py  document_retriever.py  graph_retriever.py  lineage_retriever.py
